# MathAnimation

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  EULA.txt  README.md  build.bat  build.sh  imgui.ini  premake5.lua
Animations/: CMakeLists.txt
Animations/include/: core.h
Animations/include/animation/: Animation.h  AnimationBuilders.h  AnimationManager.h  Axis.h  Commands.h  GridLines.h  Sandbox.h  Settings.h  Shapes.h  Styles.h  Svg.h  SvgFileObject.h  SvgParser.h  TextAnimations.h
Animations/include/animation/customAnimations/: BezierCurveAnimation.h  BitmapLetterAnimations.h  CharacterAnimation.h  DrawRandomCurves.h  FillingInLetters.h  GridAnimation.h  HowBezierWorks.h  LagrangeInterpolation.h  MoreQuestions.h  PhoneAnimation.h  PixelsOnAScreen.h  PlottingLettersWithPoints.h  TranslatingCurves.h  WindingContours.h
Animations/include/audio/: Audio.h  WavLoader.h
Animations/include/core/: Application.h  Colors.h  GladLayer.h  ImGuiLayer.h  Input.h  InternalImGuiConfig.h  Platform.h  Profiling.h  ProjectApp.h  Serialization.hpp  Testing.h  Window.h
Animations/include/editor/: AssetManagerPanel.h  Clipboard.h  ConsoleLog.h  EditorCameraController.h  EditorGui.h  EditorLayout.h  EditorSettings.h  ExportPanel.h  Gizmos.h  ImGuiExtended.h  ImGuiOpenGLLayer.h  ImGuiTimeline.h  MathAnimSequencer.h  ProjectScreen.h  SceneHierarchyPanel.h  TextEditUndo.h  Timeline.h  UndoSystem.h
Animations/include/editor/imgui/: ImGuiExtended.h  ImGuiLayer.h
Animations/include/editor/panels/: AnimObjectPanel.h  AssetManagerPanel.h  CodeEditorPanel.h  CodeEditorPanelManager.h  DebugPanel.h  ErrorPopups.h  ExportPanel.h  InspectorPanel.h  MenuBar.h  RegexTester.h  SceneHierarchyPanel.h  SceneManagementPanel.h
Animations/include/editor/timeline/: ImGuiTimeline.h  Timeline.h
Animations/include/latex/: LaTexFontImpl.h  LaTexGraphics2DImpl.h  LaTexLayer.h  LaTexTextLayoutImpl.h
Animations/include/math/: CMath.h  DataStructures.h
Animations/include/multithreading/: GlobalThreadPool.h  Promise.hpp
Animations/include/parsers/: Common.h  Grammar.h  ImGuiIniParser.h  Sandbox.h  SyntaxHighlighter.h  SyntaxTheme.h
Animations/include/physics/: Physics.h
Animations/include/platform/: FileSystemWatcher.h  Platform.h
Animations/include/renderer/: Camera.h  Colors.h  Deprecated_OrthoCamera.h  Deprecated_PerspectiveCamera.h  Fonts.h  Framebuffer.h  GLApi.h  GladLayer.h  OrthoCamera.h  PerspectiveCamera.h  PixelBufferDownloader.h  Renderer.h  Shader.h  Texture.h  TextureCache.h  VideoWriter.h
Animations/include/scripting/: GlobalApi.h  LuauLayer.h  MathAnimGlobals.h  ScriptAnalyzer.h
Animations/include/shaders/: default.glsl.hpp  screen.glsl.hpp  vectorShader.glsl.hpp
Animations/include/svg/: Paths.h  Styles.h  Svg.h  SvgCache.h  SvgParser.h
Animations/include/utils/: CMath.h  FontAwesome.h  IconsFontAwesome5.h  IconsFontAwesome5Brands.h  LRUCache.hpp  TableOfContents.h  TexturePacker.h  base64.h
Animations/include/video/: Encoder.h  NvidiaEncoder.h
Animations/src/: SingleIncludeImpls.cpp  core.cpp  main.cpp
Animations/src/animation/: Animation.cpp  AnimationBuilders.cpp  AnimationManager.cpp  Axis.cpp  Commands.cpp  GridLines.cpp  Sandbox.cpp  Settings.cpp  Shapes.cpp  Styles.cpp  Svg.cpp  SvgFileObject.cpp  SvgParser.cpp  TextAnimations.cpp
Animations/src/animation/customAnimations/: BezierCurveAnimation.cpp  BitmapLetterAnimations.cpp  CharacterAnimation.cpp  DrawRandomCurves.cpp  FillingInLetters.cpp  GridAnimation.cpp  HowBezierWorks.cpp  LagrangeInterpolation.cpp  MoreQuestions.cpp  PhoneAnimation.cpp  PixelsOnAScreen.cpp  PlottingLettersWithPoints.cpp  TranslatingCurves.cpp  WindingContours.cpp
Animations/src/audio/: Audio.cpp  WavLoader.cpp
Animations/src/core/: Application.cpp  GladLayer.cpp  ImGuiLayer.cpp  Input.cpp  ProjectApp.cpp  Testing.cpp  Win32Platform.cpp  Window.cpp
Animations/src/editor/: AnimObjectPanel.cpp  AssetManagerPanel.cpp  Clipboard.cpp  ConsoleLog.cpp  DebugPanel.cpp  EditorCameraController.cpp  EditorGui.cpp  EditorLayout.cpp  EditorSettings.cpp  ExportPanel.cpp  Gizmos.cpp  ImGuiExtended.cpp  ImGuiOpenGLLayer.cpp  ImGuiTimeline.cpp  MathAnimSequencer.cpp  MenuBar.cpp  ProjectScreen.cpp  SceneHierarchyPanel.cpp  SceneManagementPanel.cpp  TextEditUndo.cpp  Timeline.cpp  UndoSystem.cpp
Animations/src/editor/imgui/: ImGuiExtended.cpp  ImGuiLayer.cpp  ImGuiOpenGLLayer.cpp
Animations/src/editor/panels/: AnimObjectPanel.cpp  AssetManagerPanel.cpp  CodeEditorPanel.cpp  CodeEditorPanelManager.cpp  ConsoleLog.cpp  DebugPanel.cpp  ErrorPopups.cpp  ExportPanel.cpp  InspectorPanel.cpp  MenuBar.cpp  RegexTester.cpp  SceneHierarchyPanel.cpp  SceneManagementPanel.cpp
Animations/src/latex/: LaTexFontImpl.cpp  LaTexGraphics2DImpl.cpp  LaTexLayer.cpp  LaTexTextLayoutImpl.cpp
Animations/src/math/: CMath.cpp  DataStructures.cpp
Animations/src/multithreading/: GlobalThreadPool.cpp
Animations/src/parsers/: Common.cpp  Grammar.cpp  ImGuiIniParser.cpp  Sandbox.cpp  SyntaxHighlighter.cpp  SyntaxTheme.cpp
Animations/src/physics/: Physics.cpp
Animations/src/platform/: FileSystemWatcherLinux.cpp  FileSystemWatcherWin32.cpp  PlatformLinux.cpp  PlatformWin32.cpp
Animations/src/renderer/: Camera.cpp  Colors.cpp  Deprecated_OrthoCamera.cpp  Deprecated_PerspectiveCamera.cpp  Fonts.cpp  Framebuffer.cpp  GLApi.cpp  GladLayer.cpp  OrthoCamera.cpp  PerspectiveCamera.cpp  PixelBufferDownloader.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  TextureCache.cpp  VideoWriter.cpp
Animations/src/scripting/: GlobalApi.cpp  LuauLayer.cpp  MathAnimGlobals.cpp  ScriptAnalyzer.cpp
Animations/src/svg/: Paths.cpp  Styles.cpp  Svg.cpp  SvgCache.cpp  SvgParser.cpp  TexturePacker.cpp
Animations/src/utils/: CMath.cpp  TableOfContents.cpp  TexturePacker.cpp  base64.cpp
Animations/src/video/: Encoder.cpp
Animations/tests/: AnimationManagerTests.cpp  AnimationManagerTests.h  LRUCacheTests.cpp  LRUCacheTests.h  SyntaxHighlighterTestCases.h  SyntaxHighlighterTests.cpp  SyntaxHighlighterTests.h  SyntaxThemeTests.cpp  SyntaxThemeTests.h  main.cpp
(+48 files in other folders)
