cmake_minimum_required(VERSION 3.21)

project(
    MathAnimations
    VERSION 1.0
    LANGUAGES C CXX
)

###############
# CMake setup #
###############
set_property(GLOBAL PROPERTY USE_FOLDERS ON)

if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
    set(MATH_ANIMATION_OS_LINUX TRUE)
endif()

if(WIN32)
    set(MATH_ANIMATION_OS_WINDOWS TRUE)
endif()

if(APPLE)
    set(MATH_ANIMATION_OS_OSX TRUE)
endif()

cmake_policy(SET CMP0077 NEW)

# Custom Build configuration for profiler build
LIST(APPEND CMAKE_CONFIGURATION_TYPES RelWithProfiler)
LIST(REMOVE_DUPLICATES CMAKE_CONFIGURATION_TYPES)
SET(CMAKE_CONFIGURATION_TYPES ${CMAKE_CONFIGURATION_TYPES}
   CACHE STRING "CMake configuration types" FORCE)
LIST(REMOVE_DUPLICATES CMAKE_C_FLAGS_RELWITHPROFILER)
LIST(REMOVE_DUPLICATES CMAKE_CXX_FLAGS_RELWITHPROFILER)
LIST(REMOVE_DUPLICATES CMAKE_EXE_LINKER_FLAGS_RELWITHPROFILER)
LIST(REMOVE_DUPLICATES CMAKE_SHARED_LINKER_FLAGS_RELWITHPROFILER)
SET(CMAKE_C_FLAGS_RELWITHPROFILER ${CMAKE_C_FLAGS_RELEASE}
    CACHE STRING "" FORCE)
SET(CMAKE_CXX_FLAGS_RELWITHPROFILER ${CMAKE_CXX_FLAGS_RELEASE}
    CACHE STRING "" FORCE)
SET(CMAKE_EXE_LINKER_FLAGS_RELWITHPROFILER ${CMAKE_EXE_LINKER_FLAGS_RELEASE}
    CACHE STRING "" FORCE)
SET(CMAKE_SHARED_LINKER_FLAGS_RELWITHPROFILER ${CMAKE_SHARED_LINKER_FLAGS_RELEASE}
    CACHE STRING "" FORCE)

# Custom Build configuration for tests
LIST(APPEND CMAKE_CONFIGURATION_TYPES RelTests)
LIST(REMOVE_DUPLICATES CMAKE_CONFIGURATION_TYPES)
SET(CMAKE_CONFIGURATION_TYPES ${CMAKE_CONFIGURATION_TYPES}
   CACHE STRING "CMake configuration types" FORCE)
LIST(REMOVE_DUPLICATES CMAKE_C_FLAGS_RELTESTS)
LIST(REMOVE_DUPLICATES CMAKE_CXX_FLAGS_RELTESTS)
LIST(REMOVE_DUPLICATES CMAKE_EXE_LINKER_FLAGS_RELTESTS)
LIST(REMOVE_DUPLICATES CMAKE_SHARED_LINKER_FLAGS_RELTESTS)
SET(CMAKE_C_FLAGS_RELTESTS ${CMAKE_C_FLAGS_RELEASE}
    CACHE STRING "" FORCE)
SET(CMAKE_CXX_FLAGS_RELTESTS ${CMAKE_CXX_FLAGS_RELEASE}
    CACHE STRING "" FORCE)
SET(CMAKE_EXE_LINKER_FLAGS_RELTESTS ${CMAKE_EXE_LINKER_FLAGS_RELEASE}
    CACHE STRING "" FORCE)
SET(CMAKE_SHARED_LINKER_FLAGS_RELTESTS ${CMAKE_SHARED_LINKER_FLAGS_RELEASE}
    CACHE STRING "" FORCE)

# Change output directories to a more sensible layout
# set output directories for all builds (Debug, Release, etc.)
foreach( OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES} )
    string( TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG_UPPER )
    set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG_UPPER} ${CMAKE_CURRENT_BINARY_DIR}/bin/${OUTPUTCONFIG}/lib )
    set( CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG_UPPER} ${CMAKE_CURRENT_BINARY_DIR}/bin/${OUTPUTCONFIG}/lib )
    set( CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG_UPPER} ${CMAKE_CURRENT_BINARY_DIR}/bin/${OUTPUTCONFIG} )
endforeach( OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES )

# Configure language defaults
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)

if(MSVC)
    set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
endif()

# Include main module
add_subdirectory(Animations)

#############
# IDE setup #
#############
set_property(
    DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
    PROPERTY VS_STARTUP_PROJECT MathAnimations
)
